--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - uses: ../../action.yml
+      - uses: .
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
