--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -10,4 +10,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          filename: test.md
+          filename: template.md
