--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -5,8 +5,8 @@ jobs:
     name: Add checkout and pull commands
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - uses: harupy/comment-on-pr@master
+      - uses: actions/checkout@v2
+      - uses: wamburu/comment-on-pr@1.0.1-beta
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
