Add ability to keep the comment up to date. When updatecomment is provided, the comment tag will be appended to the comment. Subsequent comments will search for comments with the tag and update that comment.
Also correct the argument names to match readme.

--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -10,4 +10,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          filename: template.md
+          template: template.md
